Resolved contrast on bulk assign button

--- a/app/assets/stylesheets/admin/page-applications.scss
+++ b/app/assets/stylesheets/admin/page-applications.scss
@@ -594,6 +594,7 @@
   position: relative;
   left: -9999px;
   margin-top: 10px;
+  background-color: $blue-link-colour;
 
   &.show-button {
     left: 0;
